[package]
name = "eggcc"
version = "0.1.0"
edition = "2021"

[[test]]
harness = false
name = "files"


[dependencies]
egglog = { git = "https://github.com/egraphs-good/egglog", rev = "325814fd90767b5e43c72bc2eb65e14ff0b8746c" }
egraph-serialize = "0.1.0"
log = "0.4.19"
thiserror = "1"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
petgraph = "0.6"
hashbrown = "0.14"
indexmap = "2.0"
fixedbitset = "0.4.2"
smallvec = "1.11.1"

syn = { version = "2.0", features = ["full", "extra-traits"] }
# currently using Pat-Lafon's fork of bril with brillvm fixes
# on the llvm-18 branch
bril2json = { git = "https://github.com/uwplse/bril", rev = "2a2e3329a6721c86ceee768f6dfea5c17fb14115" }
brilirs = { git = "https://github.com/uwplse/bril", rev = "2a2e3329a6721c86ceee768f6dfea5c17fb14115" }
bril-rs = { git = "https://github.com/uwplse/bril", rev = "2a2e3329a6721c86ceee768f6dfea5c17fb14115" }
brilift = { git = "https://github.com/uwplse/bril", rev = "2a2e3329a6721c86ceee768f6dfea5c17fb14115" }
rs2bril = { git = "https://github.com/uwplse/bril", rev = "2a2e3329a6721c86ceee768f6dfea5c17fb14115" ,features = [
  "import",
] }
ordered-float = { version = "3.7" }
serde_json = "1.0.103"
dot-structures = "0.1.1"
graphviz-rust = "0.8.0"

dag_in_context = { path = "dag_in_context" }

# binary dependencies
clap = { version = "4.4.7", features = ["derive"] }
tempfile = "3.10.1"

env_logger = "0.11.3"

[dev-dependencies]
glob = "0.3.1"
libtest-mimic = "0.6.1"
insta = { version = "1.31.0", features = ["yaml"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[features]
# Writes intermediate graphs and SVGs to /tmp
write-intermediates = []
# Runs tests relying on LLVM. This may not be available on all systems.
llvm = []
default = ["llvm"]
