[package]
name = "eggcc"
version = "0.1.0"
edition = "2021"

[[test]]
harness = false
name = "files"


[dependencies]
egglog = { git = "https://github.com/egraphs-good/egglog", rev = "ad4f8a8a2984d249cb626a222fbde64dac50ecb1" }
egraph-serialize = "0.2.0"
log = "0.4.19"
thiserror = "1"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
petgraph = "0.6"
hashbrown = "0.14"
indexmap = "2.0"
fixedbitset = "0.4.2"
smallvec = "1.11.1"

syn = { version = "2.0", features = ["full", "extra-traits"] }
# currently using the uwplse/bril fork of bril, on eggcc-main
bril2json = { git = "https://github.com/uwplse/bril", rev = "e2be3f5d7e160f02b7aed0ef2bcc3e13ae722d2b" }
brilirs = { git = "https://github.com/uwplse/bril", rev = "e2be3f5d7e160f02b7aed0ef2bcc3e13ae722d2b" }
bril-rs = { git = "https://github.com/uwplse/bril", rev = "e2be3f5d7e160f02b7aed0ef2bcc3e13ae722d2b" }
brilift = { git = "https://github.com/uwplse/bril", rev = "e2be3f5d7e160f02b7aed0ef2bcc3e13ae722d2b" }
rs2bril = { git = "https://github.com/uwplse/bril", rev = "e2be3f5d7e160f02b7aed0ef2bcc3e13ae722d2b" ,features = [
  "import",
] }
brillvm = { git = "https://github.com/uwplse/bril", rev = "e2be3f5d7e160f02b7aed0ef2bcc3e13ae722d2b" }


ordered-float = { version = "3.7" }
serde_json = "1.0.103"
dot-structures = "0.1.1"
graphviz-rust = "0.8.0"

dag_in_context = { path = "dag_in_context" }

# binary dependencies
clap = { version = "4.4.7", features = ["derive"] }
tempfile = "3.10.1"

env_logger = "0.11.3"

[dev-dependencies]
glob = "0.3.1"
libtest-mimic = "0.6.1"
insta = { version = "1.31.0", features = ["yaml"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[features]
# Writes intermediate graphs and SVGs to /tmp
write-intermediates = []
# Runs tests relying on LLVM. This may not be available on all systems.
llvm = []
default = ["llvm"]
