[package]
name = "dag_in_context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egglog = { git = "https://github.com/rtjoa/egglog", rev = "e3a3ae" }
strum = "0.25"
strum_macros = "0.25"
main_error = "0.1.2"
thiserror = "1.0"
bril-rs = { git = "https://github.com/sampsyo/bril", rev = "b20cc2d" }
graphviz-rust = "0.8.0"
dot-structures = "0.1.1"
