[package]
name = "dag_in_context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egglog = { git = "https://github.com/egraphs-good/egglog", rev = "8deef5e2fb61283709770f93fd4511db7b9b8b22" }
strum = "0.25"
strum_macros = "0.25"
main_error = "0.1.2"
thiserror = "1.0"
egraph-serialize = "0.2.0"
bril-rs = { git = "https://github.com/uwplse/bril", rev = "f303a7d384f21a891d0215dc47e5ea947f014cf5" }
indexmap = "2.0.0"
rustc-hash = "1.1.0"
ordered-float = "3"
graphviz-rust = "0.8.0"
dot-structures = "0.1.1"
symbol_table = { version = "0.3.0", features = ["global"] }
rpds = "1.1.0"
log = "0.4"
env_logger = "0.11.3"
insta = { version = "1.31.0", features = ["yaml"] }

clap = { version = "4.4.7", features = ["derive"] }