[package]
name = "tree_in_context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egglog = { git = "https://github.com/egraphs-good/egglog", rev = "77ffa1f" }
strum = "0.25"
strum_macros = "0.25"
main_error = "0.1.2"
thiserror = "1.0"
bril-rs = { git = "https://github.com/sampsyo/bril", rev = "daaff28" }
