[package]
name = "tree-unique-args"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# add fresh i64 branch
egglog = { git = "https://github.com/oflatt/egg-smol", rev = "3510d65" }
strum = "0.25"
strum_macros = "0.25"
main_error = "0.1.2"
thiserror = "1.0"
